--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>I'm <span>Jenny Wilson</span> a Professional Photographer from New York City</h2>
-          <p>Blanditiis praesentium aliquam illum tempore incidunt debitis dolorem magni est deserunt sed qui libero. Qui voluptas amet.</p>
+          <h2>I'm <span>Prodyut Ghosh</span> a Professional Photographer from India</h2>
+          <p>I believe in passion. passion leads to great results.</p>
           <a href="contact.html" class="btn-get-started">Available for hire</a>
         </div>
       </div>
