--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
               <li><a href="gallery.html">Travel</a></li>
               <li class="dropdown"><a href="#"><span>Sub Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
+                  <li><a href="#">new collection</a></li>
+                  <li><a href="#">get menu</a></li>
+                  <li><a href="#">Get quotation</a></li>
                 </ul>
               </li>
             </ul>
